--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 <script src="app/weather/weather.js"></script>
 <script src="app/operator-control/operator-control.js"></script>
 <script src="app/util/focus-directive.js"></script>
+<script src="app/util/editable-directive.js"></script>
 <script src="app/data/data-service.js"></script>
 <script src="app/health/health.js"></script>
 <script src="app/auth/session-service.js"></script>
@@ -214,7 +215,7 @@
             </div>
 
         </material-toolbar>
-        <material-content id="ui-view-container-div" ui-view scroll-y flex class="material-content-padding">
+        <material-content id="ui-view-container-div" ui-view scroll-y scroll-x flex class="material-content-padding">
         </material-content>
     </section>
 </section>
